--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ eframe = { version = "0.30", default-features = false, features = [
     "wayland",       # To support Linux (and CI)
 ] }
 log = "0.4"
+indexmap = { version = "2.7.1", features = ["serde"] }
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
